[workspace]
members = ["./bointer-derive"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.66"
license = "MIT OR Apache-2.0"
keywords = ["pointer", "unsafe"]
categories = ["rust-patterns", "no-std"]

[package]
name = "bointer"
description = "Assorted pointer-related utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
derive = ["bointer-derive"]
alloc = []
std = ["alloc"]
default = ["std", "derive"]

[dependencies]
bointer-derive = { version = "0.2.0", path = "bointer-derive", optional = true }
