[package]
name = "bointer-derive"
description = "Assorted pointer-related utilities (derive macro)"
authors = ["Dennis Duda <git@seri.tools>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", default-features = false, features = [
  "derive",
  "parsing",
  "proc-macro",
  "printing",
] }
quote = "1.0"
