[package]
name = "bointer-derive"
description = "Assorted pointer-related utilities (derive macro)"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
venial = "0.5.0"
quote = "1.0"
proc-macro2 = "1.0.66"
